--- a/src/public/assets/scss/style1.scss
+++ b/src/public/assets/scss/style1.scss
@@ -27,6 +27,7 @@ input {
   padding: 1rem;
   border-radius: 10%;
   background-color: #e0e0e0;
+  border-color: #424242;
   opacity: 0.8;
   margin: 0% 5%;
 }
@@ -36,11 +37,13 @@ input {
 }
 
 .form-title {
-  color: #424242
+  color: #424242;
 }
 
 .home-title {
   margin-top: 5%;
+  color: #f5f5f5;
+  opacity: 0.8;
 }
 
 
