Updated input areas on home page

--- a/src/public/assets/scss/style1.scss
+++ b/src/public/assets/scss/style1.scss
@@ -70,7 +70,7 @@ input {
   display: none;
 }
 
-@media only screen and (max-device-width: 1125px) {
+@media only screen and (max-device-width: 1130px) {
   .show-mobile {
     display: block;
   }
@@ -81,7 +81,7 @@ input {
 
   .login-signup-container {
     display: block;
-    padding: 0% 1% 15%;
+    padding: 5% 15%;
   }
 
   .login-signup-form {
